fix: wrap advantages

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 .advantage {
